feat: add base styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="css/style.css" />
 		<title>Photo Gallery</title>
 	</head>
-	<body>
+	<body class="container">
 		<script src="js/app.js"></script>
 	</body>
 </html>
