--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 		<title>Photo Gallery</title>
 	</head>
 	<body class="container">
+		<main>Main</main>
+
+		<footer>
+			<a href="https://github.com/RimidalU" target="_blank">
+				<span> &copy; Copyright 2023 </span>
+				RimidalU
+			</a>
+		</footer>
+
 		<script src="js/app.js"></script>
 	</body>
 </html>
