feat: implement header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 		<title>Photo Gallery</title>
 	</head>
 	<body class="container">
+		
+		<header>
+			<h1>Photo gallery in HTML, CSS and JS</h1>
+		</header>
+
 		<main>Main</main>
 
 		<footer>
