--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 		<title>Photo Gallery</title>
 	</head>
 	<body class="container">
-		
 		<header>
 			<h1>Photo gallery in HTML, CSS and JS</h1>
 		</header>
@@ -20,7 +19,7 @@
 				RimidalU
 			</a>
 		</footer>
-
-		<script src="js/app.js"></script>
+		<script type="module" src="./data/gallery.js"></script>
+		<script type="module" src="js/app.js"></script>
 	</body>
 </html>
