feat: add gallery to app

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 			<h1>Photo gallery in HTML, CSS and JS</h1>
 		</header>
 
-		<main>Main</main>
+		<main>
+			<section>
+				<div id="gallery" class="wrapper"></div>
+			</section>
+		</main>
 
 		<footer>
 			<a href="https://github.com/RimidalU" target="_blank">
@@ -19,6 +23,7 @@
 				RimidalU
 			</a>
 		</footer>
+
 		<script type="module" src="./data/gallery.js"></script>
 		<script type="module" src="js/app.js"></script>
 	</body>
