feat: impliment gallery gradient

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<section>
 				<div id="gallery" class="wrapper"></div>
 			</section>
+			<div class="gallery__gradient"></div>
 		</main>
 
 		<footer>
