feat: add search input to app

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body class="container">
 		<header>
 			<h1>Photo gallery in HTML, CSS and JS</h1>
+			<input class="search__input" type="search" id="searchbox" placeholder="Search Photo" />
 		</header>
 
 		<main>
